--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
           <target>1.8</target>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-install-plugin</artifactId>
+        <version>2.5.2</version>
+      </plugin>
     </plugins>
   </build>
 </project>
