Introduce integration with Codecov.io

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,14 @@ matrix:
   include:      
     #Linux
     - os: linux
-    
+
+    # Code Coverage
+    - script:
+        - mvn compile
+        - mvn cobertura:cobertura
+      after_success:
+        - bash <(curl -s https://codecov.io/bash)
+
     # OSX
     - os: osx
       sudo: false
