--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,11 @@
       <version>4.8.2</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+      <version>1.11</version>
+    </dependency>
   </dependencies>
 
   <build>
