Update travis.yml for gradle

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,5 +16,4 @@ before_install:
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then jdk_switcher use "oraclejdk8"; fi
 
 script:
-  - mvn compile
-  - mvn test
+  - ./gradlew test
