--- a/diffblue.yml
+++ b/diffblue.yml
@@ -6,36 +6,23 @@ phases:
   cbmcArguments:
     classpath: '/tools/cbmc/models-simple-overlay.jar:/tools/cbmc/models.jar:.'
     depth: false
-    java-max-input-array-length: 10
-    java-max-vla-length: 33
-    java-throw-runtime-exceptions: false
-    string-max-input-length: 10
-    string-max-length: 300
-    string-printable: true
+    java-assume-inputs-non-null: true
+    max-nondet-array-length: 10
     unwind: 1
 -
   timeout: 300
   cbmcArguments:
     classpath: '/tools/cbmc/models-simple-overlay.jar:/tools/cbmc/models.jar:.'
     depth: false
-    java-max-input-array-length: 20
-    java-max-vla-length: 33
-    java-throw-runtime-exceptions: false
-    string-max-input-length: 100
-    string-max-length: 400
     string-printable: false
+    max-nondet-array-length: 20
     unwind: 2
 -
   timeout: 300
   cbmcArguments:
     classpath: '/tools/cbmc/models-simple-overlay.jar:/tools/cbmc/models.jar:.'
     depth: false
-    java-max-input-array-length: 30
-    java-max-vla-length: 33
-    java-throw-runtime-exceptions: true
-    string-max-input-length: 10
-    string-max-length: 400
-    string-printable: false
+    max-nondet-array-length: 30
     unwind: 10
     # Because tic-tac-toe has 9 squares, we need to unwind the loops 10 times
     # This will be auto-detected in a future version
