--- a/diffblue.yml
+++ b/diffblue.yml
@@ -1,4 +1,10 @@
+phases:
+- cbmcArguments:
+    throw-runtime-exception: true
+-
+-
 cbmcArguments:
   # Because tic-tac-toe has 9 squares, we need to unwind the loops 10 times
   # This will be auto-detected in a future version
   java-max-input-array-length: 10
+  
