java-external-code-action: 'mock-non-jdk'

--- a/diffblue.yml
+++ b/diffblue.yml
@@ -1,5 +1,6 @@
 cbmcArguments:
   slice-function-calls: org\.slf4j\.Logger.*
+  java-external-code-action: 'mock-non-jdk'
 phases:
 -
   timeout: 300
