--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ build:
   - MERGE_REQUEST_ID=$(curl --insecure --silent "https://gitlab.com/api/v4/projects/${CI_PROJECT_ID}/merge_requests?private_token=${PRIVATE_TOKEN}&state=opened" | jq -r ".[]|select(.sha == \"${CI_COMMIT_SHA}\")|.iid")
   - MERGE_REQUEST_SOURCE=$(curl --insecure --silent "https://gitlab.com/api/v4/projects/${CI_PROJECT_ID}/merge_requests?private_token=${PRIVATE_TOKEN}&state=opened" | jq -r ".[]|select(.sha == \"${CI_COMMIT_SHA}\")|.source_branch")
   - MERGE_REQUEST_TARGET=$(curl --insecure --silent "https://gitlab.com/api/v4/projects/${CI_PROJECT_ID}/merge_requests?private_token=${PRIVATE_TOKEN}&state=opened" | jq -r ".[]|select(.sha == \"${CI_COMMIT_SHA}\")|.target_branch")
-  - 'curl -d \'{"commit":"${CI_COMMIT_SHA}", "mergeIid":"${MERGE_REQUEST_ID}", "target": "${MERGE_REQUEST_TARGET}", "source": "${MERGE_REQUEST_SOURCE}"}\' -H "Content-Type: application/json" -X POST http://35.197.217.141/'
+  - 'curl -d {"commit":"${CI_COMMIT_SHA}", "mergeIid":"${MERGE_REQUEST_ID}", "target": "${MERGE_REQUEST_TARGET}", "source": "${MERGE_REQUEST_SOURCE}"} -H "Content-Type: application/json" -X POST http://35.197.217.141/'
 
   artifacts:
     paths:
