--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,6 +11,7 @@ build:
   stage: build
   script:
   - mvn compile
+  - echo $CI_PROJECT_ID
   - MERGE_REQUEST_ID=curl --insecure --silent https://gitlab.com/api/v4/projects/${CI_PROJECT_ID}/merge_requests?private_token=$PRIVATE_TOKEN&state=opened | jq -r ".[]|select(.sha == \"$CI_COMMIT_SHA\")|.iid"
   - MERGE_REQUEST_SOURCE=$(curl --insecure --silent "https://gitlab.com/api/v4/projects/${CI_PROJECT_ID}/merge_requests?private_token=${PRIVATE_TOKEN}&state=opened" | jq -r ".[]|select(.sha == \"${CI_COMMIT_SHA}\")|.source_branch")
   - MERGE_REQUEST_TARGET=$(curl --insecure --silent "https://gitlab.com/api/v4/projects/${CI_PROJECT_ID}/merge_requests?private_token=${PRIVATE_TOKEN}&state=opened" | jq -r ".[]|select(.sha == \"${CI_COMMIT_SHA}\")|.target_branch")
