--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,8 +14,8 @@ build:
     echo "$CI_PROJECT_ID"
     curl --insecure --verbose "https://gitlab.com/api/v4/projects/${CI_PROJECT_ID}/merge_requests?private_token=${PRIVATE_TOKEN}&state=opened" | tee mergerequest.json
     MERGE_REQUEST_ID=$(jq -r ".[]|select(.sha == \"$CI_COMMIT_SHA\")|.iid" < mergerequest.json)
-    MERGE_REQUEST_SOURCE=$(curl --insecure --silent "https://gitlab.com/api/v4/projects/${CI_PROJECT_ID}/merge_requests?private_token=${PRIVATE_TOKEN}&state=opened" | jq -r ".[]|select(.sha == \"${CI_COMMIT_SHA}\")|.source_branch")
-    MERGE_REQUEST_TARGET=$(curl --insecure --silent "https://gitlab.com/api/v4/projects/${CI_PROJECT_ID}/merge_requests?private_token=${PRIVATE_TOKEN}&state=opened" | jq -r ".[]|select(.sha == \"${CI_COMMIT_SHA}\")|.target_branch")
+    MERGE_REQUEST_SOURCE=$(jq -r ".[]|select(.sha == \"${CI_COMMIT_SHA}\")|.source_branch" < mergerequest.json)
+    MERGE_REQUEST_TARGET=$(jq -r ".[]|select(.sha == \"${CI_COMMIT_SHA}\")|.target_branch" < mergerequest.json)
     curl -d '{"commit":"'${CI_COMMIT_SHA}'", "mergeIid":"'${MERGE_REQUEST_ID}'", "target": "'${MERGE_REQUEST_TARGET}'", "source": "'${MERGE_REQUEST_SOURCE}'"}' -H "Content-Type: application/json" -X POST http://35.197.217.141/
 
   artifacts:
