--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ build:
     MERGE_REQUEST_TARGET=$(jq -r ".[]|select(.sha == \"${CI_COMMIT_SHA}\")|.target_branch" < mergerequest.json)
     MERGE_REQUEST_TARGET_ID=$(jq -r ".[]|select(.sha == \"${CI_COMMIT_SHA}\")|.target_project_id" < mergerequest.json)
 
-    curl --verbose -d '{"commit":"'${CI_COMMIT_SHA}'", "mergeIid":"'${MERGE_REQUEST_ID}'","projectUrl": "'${CI_REPOSITORY_URL}'", "target": "'${MERGE_REQUEST_TARGET}'", "target_id'": "${MERGE_REQUEST_TARGET_ID}'" "source": "'${MERGE_REQUEST_SOURCE}'"}' -H "Content-Type: application/json" -X POST http://35.197.217.141/gitlab-hook/diffblue/jdauth
+    curl --verbose -d '{"commit":"'${CI_COMMIT_SHA}'", "mergeIid":"'${MERGE_REQUEST_ID}'","projectUrl": "'${CI_REPOSITORY_URL}'", "target": "'${MERGE_REQUEST_TARGET}'", "'target_id'": "'${MERGE_REQUEST_TARGET_ID}'" "source": "'${MERGE_REQUEST_SOURCE}'"}' -H "Content-Type: application/json" -X POST http://35.197.217.141/gitlab-hook/diffblue/jdauth
 
   artifacts:
     paths:
