Addressed James's individual comment but not main comments

--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
               <consoleOutput>true</consoleOutput>
               <failsOnError>true</failsOnError>
               <violationSeverity>warning</violationSeverity>
-              <linkXRef>false</linkXRef>
+              <!--<linkXRef>false</linkXRef>-->
             </configuration>
             <goals>
               <goal>check</goal>
