Update CBMCArguments parameters

--- a/diffblue.yml
+++ b/diffblue.yml
@@ -1,1 +1,7 @@
-
+buildCmd: mvn compile
+testCmd: mvn test
+cbmcArguments:
+  # Because tic-tac-toe has 9 squares, we need to unwind the loops 10 times
+  # This will be auto-detected in a future version
+  max-nondet-array-length: 10
+  unwind: 10
