--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'java'
 apply plugin: 'maven'
+apply plugin: 'jacoco'
 
 group = 'com.diffblue.javademo'
 version = '1.0.0'
@@ -19,7 +20,7 @@ task wrapper(type: Wrapper) {
 
 repositories {
         
-     maven { url "http://repo.maven.apache.org/maven2" }
+     maven { url "https://repo.maven.apache.org/maven2" }
 }
 dependencies {
     compile group: 'org.mongodb', name: 'mongodb-driver', version:'3.4.3'
@@ -42,5 +43,10 @@ sourceSets {
 			srcDirs = ["src/test"]
 		}
 	}
+}
 
+task printClasspath {
+	def cp = "${project.buildDir}\\classes\\main";
+	configurations.testRuntime.each { cp += (';'+it.toString()) };
+	println "Dependencies classpath: " + cp;
 }
