--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'java'
-apply plugin: 'maven'
 apply plugin: 'jacoco'
 
 group = 'com.diffblue.javademo'
@@ -9,44 +8,18 @@ description = """Java Demo Project"""
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
-tasks.withType(JavaCompile) {
-	options.encoding = 'UTF-8'
-}
-
-task wrapper(type: Wrapper) {
-    gradleVersion = '3.5'
-}
-
 
 repositories {
-        
-     maven { url "https://repo.maven.apache.org/maven2" }
+  mavenCentral()
 }
+
 dependencies {
-    compile group: 'org.mongodb', name: 'mongodb-driver', version:'3.4.3'
-    compile group: 'org.mongodb', name: 'bson', version:'3.6.3'
-    compile group: 'commons-codec', name: 'commons-codec', version:'1.11'
-    compile group: 'com.diffblue', name: 'deeptestutils', version:'1.0.0'
-    testCompile group: 'junit', name: 'junit', version:'4.8.2'
-    testCompile group: 'org.powermock', name: 'powermock-module-junit4', version:'1.6.6'
-    testCompile group: 'org.mockito', name: 'mockito-all', version:'1.10.19'
+  implementation group: 'org.mongodb', name: 'mongodb-driver', version:'3.4.3'
+  implementation group: 'org.mongodb', name: 'bson', version:'3.6.3'
+  implementation group: 'commons-codec', name: 'commons-codec', version:'1.11'
+  implementation group: 'com.diffblue', name: 'deeptestutils', version:'1.0.0'
+  testImplementation group: 'junit', name: 'junit', version:'4.8.2'
+  testImplementation group: 'org.powermock', name: 'powermock-module-junit4', version:'1.6.6'
+  testImplementation group: 'org.mockito', name: 'mockito-all', version:'1.10.19'
 }
 
-sourceSets {
-	main {
-		java {
-			srcDirs = ["src/main"]
-		}
-	}
-	test {
-		java {
-			srcDirs = ["src/test"]
-		}
-	}
-}
-
-task printClasspath {
-	def cp = "${project.buildDir}\\classes\\main";
-	configurations.testRuntime.each { cp += (';'+it.toString()) };
-	println "Dependencies classpath: " + cp;
-}
