--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,10 @@
   <groupId>com.diffblue.javademo</groupId>
   <artifactId>java-demo</artifactId>
   <version>1.0.0</version>
-  <packaging>jar</packaging>
+    <modules>
+        <module>module with spaces</module>
+    </modules>
+    <packaging>pom</packaging>
 
   <name>Java Demo Project</name>
   <url>http://diffblue.com</url>
@@ -36,6 +39,12 @@
       <groupId>commons-codec</groupId>
       <artifactId>commons-codec</artifactId>
       <version>1.11</version>
+    </dependency>
+    <dependency>
+      <groupId>org.hamcrest</groupId>
+      <artifactId>hamcrest</artifactId>
+      <version>2.2</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
