--- a/module with spaces/pom.xml
+++ b/module with spaces/pom.xml
@@ -9,7 +9,7 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>module with spaces</artifactId>
+  <artifactId>module-with-spaces</artifactId>
 
   <name>module with spaces</name>
   <!-- FIXME change it to the project's website -->
